Extract utility method in controller